# galder-game-jam-2022

./: .gitignore  CMakeLists.txt  LICENSE  README.md
content/bucket/: README.md
content/bucket/ansimuz-gothicvania-town/__MACOSX/GothicVania-town-files/: ._public-license.txt
content/bucket/ansimuz-gothicvania-town/__MACOSX/GothicVania-town-files/PSD/: ._concepts.psd
content/bucket/magic-cliffs/__MACOSX/Magic-Cliffs-Environment/: ._public-license.txt
content/docs/: DesignDoc-ReadMe.txt  DesignDoc.docx
content/docs/GDDTemplate/: ReadMe.rtf  TaskScheduleGDD.xlsx
content/game/content/: README.md
content/game/content/maps/: finalmap.json  gamedev.tiled-project  map1.json  map2.json  map3.json
content/graphics/ase/icons/: art-and-sound.ase  character-design.ase  gameplay.ase  level-design.ase  marketing.ase  misc.ase  story.ase  technical.ase
content/graphics/ase/palettes/: 255_colors.ase  465_colors.ase  nesdev_colors.ase
content/graphics/characters/: README.md
content/logo/: AppIcon.icns  icon.ase  icon.rc  osx-icon-gen.sh
design/: README.md
design/art-and-sound/: README.md
design/brainstorming/: README.md
design/characters/: README.md
design/gameplay/: README.md
design/level-design/: README.md
external_libs/: README.md  fakeit.hpp
external_libs/box2d/: CMakeLists.txt
external_libs/raylib-cpp/docs/: classraylib_1_1_texture-members.html
src/: CMakeLists.txt
src/galder-game-jam-2022/: CMakeLists.txt  main.cpp
src/galder-game-jam-library/: CMakeLists.txt  GalderGameJamLibrary.h
src/galder-game-jam-library/enums/: AnimationName.h  ObjectType.h  PlayerState.h  Stage.h
src/galder-game-jam-library/game/: Player.cpp  Player.h
src/galder-game-jam-library/game/enemies/: Snake.cpp
src/galder-game-jam-library/graphics/: Animation.h  Frame.hpp  PhysicsObject.cpp  PhysicsSprite.cpp
src/galder-game-jam-library/interfaces/system/: IMapper.h
src/galder-game-jam-library/managers/: CollisionManager.cpp  CollisionManager.h  GameManager.cpp  GameManager.h  ResourceManager.hpp  TextureManager.cpp  UserDataManager.hpp  WorldManager.cpp  WorldManager.h
src/galder-game-jam-library/system/: World.cpp  World.h  WorldLayer.h
src/gamedev-base/: CMakeLists.txt  GameDevBase.h
src/gamedev-base/enums/: LogLevel.h
src/gamedev-base/interfaces/managers/: IAnimationManager.h  IDebugManager.h  IGameManager.h  IInputManager.h  IResourceManager.h  ITextureManager.h  IWorldManager.h
src/gamedev-base/interfaces/system/: IExecutableInfo.h  IGameObject.h  ILogger.h  ITimer.h  IWorld.h
src/gamedev-base/system/: Colori.hpp  ConsoleLogger.cpp  ConsoleLogger.h  DummyLogger.hpp  ExecutableInfo.cpp  ExecutableInfo.h  Timer.cpp  Timer.h  Vector2D.hpp
src/raylib-template/: CMakeLists.txt  main.cpp
src/raylib-template-library/: CMakeLists.txt  RaylibTemplateLibrary.h
src/raylib-template-library/enums/: AnimationName.h  KeyboardKey.h  PhysicsShape.h  ResourceName.h  Stage.h  TextureName.h
src/raylib-template-library/game/: Player.cpp  Player.h
src/raylib-template-library/game/enemies/: Bat.cpp  Bat.h  Snake.h
src/raylib-template-library/graphics/: Animation.cpp  PhysicsObject.cpp  PhysicsObject.h  PhysicsSprite.cpp  PhysicsSprite.h  Sprite.cpp  Sprite.h
src/raylib-template-library/interfaces/manager/: IUserDataManager.h
src/raylib-template-library/interfaces/system/: IMapper.h
src/raylib-template-library/managers/: AnimationManager.cpp  AnimationManager.h  CollisionManager.cpp  CollisionManager.h  DebugManager.cpp  DebugManager.h  DummyDebugManager.hpp  GameManager.cpp  GameManager.h  InputManager.cpp  InputManager.h  ResourceManager.hpp  TextureManager.cpp  TextureManager.h  UserDataManager.hpp  WorldManager.cpp  WorldManager.h
src/raylib-template-library/system/: Mapper.hpp  ObjectGeneratorData.hpp  UserData.hpp  World.cpp  World.h  WorldLayer.cpp  WorldLayer.h
tests/: CMakeLists.txt
tests/galder-game-jam-library-tests/: CMakeLists.txt  input_tests.cpp  logger_tests.cpp
tests/gamedev-base-tests/: CMakeLists.txt  input_tests.cpp  logger_tests.cpp  main_tests.cpp
