project(raylib_template_library VERSION 1.0.0)

add_library(raylib_template_library RaylibTemplateLibrary.h managers/GameManager.cpp managers/GameManager.h
        managers/ResourceManager.hpp managers/InputManager.cpp managers/InputManager.h enums/KeyboardKey.h
        managers/WorldManager.cpp managers/WorldManager.h enums/Stage.h system/World.cpp system/World.h
        enums/TextureName.h system/Mapper.hpp managers/TextureManager.h managers/TextureManager.cpp interfaces/system/IMapper.h system/WorldLayer.cpp system/WorldLayer.h graphics/Sprite.cpp graphics/Sprite.h graphics/PhysicsObject.cpp graphics/PhysicsObject.h enums/PhysicsShape.h graphics/PhysicsSprite.cpp graphics/PhysicsSprite.h managers/CollisionManager.cpp managers/CollisionManager.h managers/DummyDebugManager.hpp managers/DebugManager.cpp managers/DebugManager.h game/Player.cpp game/Player.h managers/AnimationManager.cpp managers/AnimationManager.h graphics/Animation.cpp graphics/Animation.h graphics/Frame.hpp enums/AnimationName.h enums/PlayerState.h system/UserData.hpp enums/ObjectType.h interfaces/manager/IUserDataManager.h managers/UserDataManager.hpp game/enemies/Bat.cpp game/enemies/Bat.h system/ObjectGeneratorData.hpp)
